# ScreenCover

./: .gitignore  BUILD.md  CMakeLists.txt  DEPLOY.md  README.md  ScreenCover_simple.cpp  TEST_PLAN.md  build.bat  build.sh  package.bat
.github/workflows/: build.yml
src/: application.cpp  application.h  main.cpp  mode_base.h  mode_overlay.cpp  mode_overlay.h  mode_poweroff.cpp  mode_poweroff.h  overlay_manager.cpp  overlay_manager.h  sequence_detector.cpp  sequence_detector.h  settings_manager.cpp  settings_manager.h  tray_icon.cpp  tray_icon.h
